common-applications/control/sunmao-tools/sunmao-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: sunmao
  name: sunmao
