common-applications/control/sunmao-tools/data-cache.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: data-cache
  namespace: sunmao
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: data-cache

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-cache
  namespace: sunmao
spec:
  selector:
    matchLabels:
      app: data-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: data-cache
    spec:
      containers:
      - name: data-cache
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/sunmao/data-cache:f939000aaf6bc67c63d056585679442a13d2e027
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: data-cache-log-volume
            mountPath: "/data-cache/log/"
      volumes:
      - name: data-cache-log-volume
        persistentVolumeClaim:
          claimName: cce-obs-data-cache-log-volume
