common-applications/control/sunmao-tools/event-retriever-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-retriever-service
  namespace: sunmao
spec:
  ports:
  - port: 80
    targetPort: 8001
    protocol: TCP
  type: ClusterIP
  selector:
    app: event-retriever
