common-applications/control/sunmao-tools/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: sunmao
spec:
  ports:
  - port: 4369
    targetPort: 4369
    protocol: TCP
    name: epmd
  - port: 25672
    targetPort: 25672
    protocol: TCP
    name: cluster-rpc
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: amqp
  selector:
    app: rabbitmq
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: sunmao
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/sunmao/rabbitmq:f939000aaf6bc67c63d056585679442a13d2e027
        imagePullPolicy: Always
        ports:
        - containerPort: 4369
        - containerPort: 25672
        - containerPort: 5672
