common-applications/control/sunmao-tools/rule-handler.yaml
apiVersion: v1
kind: Service
metadata:
  name: rule-handler
  namespace: sunmao
spec:
  ports:
  - port: 9002
    targetPort: 5000
    protocol: TCP
  selector:
    app: rule-handler
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-handler
  namespace: sunmao
spec:
  selector:
    matchLabels:
      app: rule-handler
  replicas: 1
  template:
    metadata:
      labels:
        app: rule-handler
    spec:
      containers:
      - name: rule-handler
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/sunmao/rule-handler:f939000aaf6bc67c63d056585679442a13d2e027
        imagePullPolicy: Always
        command: ["flask", "run", "--port", "5000", "--host", "0.0.0.0"]
        ports:
        - containerPort: 5000
