common-applications/control/sunmao-tools/strategy-executor.yaml
apiVersion: v1
kind: Service
metadata:
  name: strategy-executor
  namespace: sunmao
spec:
  ports:
  - port: 9003
    targetPort: 8002
    protocol: TCP
  selector:
    app: strategy-executor
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strategy-executor
  namespace: sunmao
spec:
  selector:
    matchLabels:
      app: strategy-executor
  replicas: 1
  template:
    metadata:
      labels:
        app: strategy-executor
    spec:
      containers:
      - name: strategy-executor
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/sunmao/strategy-executor:f939000aaf6bc67c63d056585679442a13d2e027
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: strategy-executor-log-volume
            mountPath: "/app/src/log/"
      volumes:
      - name: strategy-executor-log-volume
        persistentVolumeClaim:
          claimName: cce-obs-strategy-executor-log-volume
