common-applications/control/sunmao-tools/event-retriever-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx   
  name: event-retriever-ingress
  namespace: sunmao
spec:
  tls:
    - hosts:
        - sunmao.mindspore.cn
      secretName: sunmao-event-retriever-tls
  rules:
    - host: sunmao.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: event-retriever-service
              servicePort: 80
            path: /
